src/objects/rs_Profile_Part__c.object
<CustomObject>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Profile Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Name__c</fullName>
        <label>Training Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translate_From__c</fullName>
        <inlineHelpText>The language an employee can translate FROM</inlineHelpText>
        <label>Translate From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translate_To__c</fullName>
        <inlineHelpText>The language an employee can translate TO</inlineHelpText>
        <label>Translate To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Profile_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Training Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_History_Country__c</fullName>
        <inlineHelpText>Country or primary country during employment</inlineHelpText>
        <label>Work History Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_History_State__c</fullName>
        <inlineHelpText>State or Province during employment, where applicable</inlineHelpText>
        <label>Work History State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Obtained__c</fullName>
        <inlineHelpText>Year degree was awarded</inlineHelpText>
        <label>Year Obtained</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_with_Other_Firms__c</fullName>
        <inlineHelpText>Number of years the employee worked for other employers than AECOM (AECOM years include acquired firm).</inlineHelpText>
        <label>Years with Other Firms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Profile Part</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{0000000000}</displayFormat>
        <label>Profile Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Parts</pluralLabel>
    <recordTypes>
        <fullName>Award</fullName>
        <active>true</active>
        <label>Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Certification</fullName>
        <active>true</active>
        <label>Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Education</fullName>
        <active>true</active>
        <label>Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>File</fullName>
        <active>true</active>
        <label>File</label>
    </recordTypes>
    <recordTypes>
        <fullName>Languages</fullName>
        <active>true</active>
        <label>Languages</label>
    </recordTypes>
    <recordTypes>
        <fullName>Personal</fullName>
        <active>true</active>
        <label>Personal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Professional_Affiliation</fullName>
        <active>true</active>
        <label>Professional Affiliation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Publication</fullName>
        <active>true</active>
        <label>Publication</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reference</fullName>
        <active>true</active>
        <label>Reference</label>
    </recordTypes>
    <recordTypes>
        <fullName>Registration</fullName>
        <active>true</active>
        <label>Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF254</fullName>
        <active>true</active>
        <label>SF254</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF330</fullName>
        <active>true</active>
        <label>SF330</label>
    </recordTypes>
    <recordTypes>
        <fullName>Skill_Index</fullName>
        <active>true</active>
        <label>Skill Index</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <label>Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Translations</fullName>
        <active>true</active>
        <label>Translations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Work_History</fullName>
        <active>true</active>
        <label>Work History</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Affiliation_Dates</fullName>
        <active>true</active>
        <description>Confirm that Professional Affiliation held from date doesn&apos;t come after held to date</description>
        <errorConditionFormula>(LEN(TEXT(Position_Held_From__c)) &gt; 0 &amp;&amp; LEN(TEXT(Position_Held_To__c)) &gt; 0 &amp;&amp; Position_Held_From__c &gt; Position_Held_To__c &amp;&amp; Next_Part__c == null ) || (LEN(TEXT(Member_Since__c)) &gt; 0 &amp;&amp; LEN(TEXT(Position_Held_From__c)) &gt; 0 &amp;&amp; Member_Since__c &gt; Position_Held_From__c &amp;&amp; Next_Part__c == null)</errorConditionFormula>
        <errorMessage>&quot;Held from&quot; must be before &quot;Held To&quot; and &quot;Member Since&quot; must be before &quot;Held From&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Registration_Dates</fullName>
        <active>true</active>
        <description>Confirm that License and Registration issued date comes before expiry date</description>
        <errorConditionFormula>LEN(TEXT(Issued_Date__c)) &gt; 0 &amp;&amp; LEN(TEXT(Expiration_Date__c)) &gt; 0 &amp;&amp; Issued_Date__c &gt; Expiration_Date__c &amp;&amp; Next_Part__c == null</errorConditionFormula>
        <errorMessage>Expiry Date cannot be before Issued Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Work_History_Dates</fullName>
        <active>true</active>
        <description>Confirm that Work history start date doesn&apos;t come after work history end date</description>
        <errorConditionFormula>LEN(TEXT(Start_Date__c)) &gt; 0 &amp;&amp; LEN(TEXT(End_Date__c)) &gt; 0 &amp;&amp; Start_Date__c &gt; End_Date__c &amp;&amp; Next_Part__c == null</errorConditionFormula>
        <errorMessage>End Date cannot be before Start Date</errorMessage>
    </validationRules>
</CustomObject>